# gdcheck

./: .gitignore  Cargo.toml
src/: godot_project.rs  main.rs
src/gdproject_metadata/: ast.rs  parse.rs
src/gdscript/: ast.rs  check.rs  gd_type.rs  infer_type.rs  mod.rs  parse.rs  resolve.rs  resolve_type.rs  rules.rs
src/gdscript/model/: ast.rs  mod.rs
src/godot_project/: ast.rs  mod.rs  parse.rs
src/utils/: errors.rs  mod.rs  parse.rs  slice.rs  string_and_slice.rs
