[package]
name = "gdcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
clap = { version = "= 4.0.26", features = ["derive"] }
enum_variant_type = "0.3.1"
nom = "7"
colored = "2.0.0"
strum = "0.24.1"
strum_macros = "0.24.3"